Tweaked HandEvaluator. Now game can detect players best combination.
Should add player moves such as fold, raise, call etc.